tests/snapshots/snapshots__budget_color_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (489 words)

README.md
     1→# color
     3→Color lets you use colorized outputs in terms of [ANSI Escape
     4→Codes](http://en.wikipedia.org/wiki/ANSI_escape_code#Colors) in Go (Golang). It
     5→has support for Windows too! The API can be used in several ways, pick one that
     6→suits you.
     7→
     8→![Color](https://user-images.githubusercontent.com/438920/96832689-03b3e000-13f4-11eb-9803-46f4c4de3406.jpg)
     9→
    10→## Install
    12→```
    13→go get github.com/fatih/color
    14→```
    15→
    16→## Examples
    18→### Standard colors
    20→```go
    21→// Print with default helper functions
    22→color.Cyan("Prints text in cyan.")
    23→
    24→// A newline will be appended automatically
    25→color.Blue("Prints %s in blue.", "text")
    26→
    27→// These are using the default foreground colors
    28→color.Red("We have red")
    29→color.Magenta("And many others ..")
    30→
    31→```
    32→
    33→### RGB colors …
    45→### Mix and reuse colors …
    71→### Use your own output (io.Writer) …
    81→### Custom print functions (PrintFunc) …
    94→### Custom fprint functions (FprintFunc) …
   105→### Insert into noncolor strings (SprintFunc) …
   124→### Plug into existing code …
   142→### Disable/Enable color …
   177→## GitHub Actions
   179→To output color in GitHub Actions (or other CI systems that support ANSI colors), make sure to set `color.NoColor = false` so that it bypasses the check for non-tty output streams. 
   180→
   181→
   182→## Credits
   184→* [Fatih Arslan](https://github.com/fatih)
   185→* Windows support via @mattn: [colorable](https://github.com/mattn/go-colorable)
   186→
   187→## License
   189→The MIT License (MIT) - see [`LICENSE.md`](https://github.com/fatih/color/blob/master/LICENSE.md) for more details
color.go
     3→import …
    15→var (
    16→	// NoColor defines if the output is colorized or not. It's dynamically set to
    17→	// false or true based on the stdout's file descriptor referring to a terminal
    18→	// or not. It's also set to true if the NO_COLOR environment variable is
    19→	// set (regardless of its value). This is a global option and affects all
    20→	// colors. For more control over each color block use the methods
    21→	// DisableColor() individually.
    22→	NoColor = noColorIsSet() || os.Getenv("TERM") == "dumb" ||
    23→		(!isatty.IsTerminal(os.Stdout.Fd()) && !isatty.IsCygwinTerminal(os.Stdout.Fd()))
    25→	// Output defines the standard output of the print functions. By default,
    26→	// os.Stdout is used.
    27→	Output = colorable.NewColorableStdout()
    29→	// Error defines a color supporting writer for os.Stderr.
    30→	Error = colorable.NewColorableStderr()
    34→	colorsCache   = make(map[Attribute]*Color)
    35→	colorsCacheMu sync.Mutex // protects colorsCache
    39→func noColorIsSet() bool {
    43→// Color defines a custom color object which is defined by SGR parameters.
    44→type Color struct {
    45→	params  []Attribute
    46→	noColor *bool
    47→}
    49→// Attribute defines a single SGR Code
    50→type Attribute int
    52→const escape = "\x1b"
    55→const (
    68→const (
    79→var mapResetAttributes map[Attribute]Attribute = map[Attribute]Attribute{
    92→const (
   103→	foreground
   107→const (
   119→const (
   130→	background
   134→const (
   405→func (c *Color) sequence() string {
   416→func (c *Color) wrap(s string) string {
   679→func sprintln(a ...interface{}) string {
color_test.go
     3→import …
    13→// Testing colors is kinda different. First we test for given colors and their
    14→// escaped formatted results. Next we create some visual tests to be tested.
    15→// Each visual test includes the color name to be compared.
    16→func TestColor(t *testing.T) {
    17→	rb := new(bytes.Buffer)
    18→	Output = rb
    19→
      →…
   462→func readRaw(t *testing.T, r io.Reader) string {
color_windows.go
     3→import …
