tests/snapshots/snapshots__budget_color_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (5 words)

LICENSE.md
README.md
color.go
color_windows.go
doc.go
